dogservice/envoy-config.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8002 }

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                generate_request_id: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: dogservice
                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: dogservice
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: dogservice
            port_value: 8080
